--- a/_patterns/cards/contact-cards.html
+++ b/_patterns/cards/contact-cards.html
@@ -1,6 +1,6 @@
-<article class= "grid">
-  <div class="unit unit-xs-1 s-1 m-1-3 l-1-3">
-    <div class="embed embed1by1">
+<article class= "grid grid-middle">
+  <div class="unit unit-xs-1 s-1 m-1 l-1">
+    <div class="embed embed-1by1">
       <img class="embed-item" aria-details="#{{include.aria-details}}" src="{{include.image}}" alt="{{include.alt-text}}">
     </div>
     <div class="info-container">
@@ -9,37 +9,37 @@
         <p>{{include.company-description}}</p>
       </div>
       <div class="company-info">
-        <div class="grid">
-          <div class="unit unit-xs-1 s-1 m-1-2 l-1-2">
+        <div class="grid grid-middle">
+          <div class="unit unit-xs-1-2 s-1-2 m-1-2 l-1-2 gutter-1-4">
             <p>From</p>
-            <p>Since</p>
-            <p>Response</p>
-            <p>Recent</p>
+            <p>Member Since</p>
+            <p>Average Response Time</p>
+            <p>Recent Project</p>
           </div>
-          <div class="unit unit-xs-1 s-1 m-1-2 l-1-2">
+          <div class="unit unit-xs-1-2 s-1-2 m-1-2 l-1-2 gutter-1-4">
             <p><strong>{{include.from}}</strong></p>
             <p><strong>{{include.since}}</strong></p>
             <p><strong>{{include.response}}</strong></p>
             <p><strong>{{include.recent}}</strong></p>
           </div>
+        </div>
       </div>
-
-
+    </div>
   </div>
-  <div class="unit unit-xs-1 s-1 m-2-3 l-2-3">
+  <div class="unit unit-xs-1 s-1 m-1 l-1 gutter">
     <div class="grid">
-      <div class="unit unit-xs-1 s-1 m-1-2 l-1-2">
-        <div class="embed embed3by2">
+      <div class="unit unit-xs-1 s-1 m-1-2 l-1-2 gutter-1-4">
+        <div class="embed embed-3by2">
           <img class="embed-item" aria-details="#{{include.aria-details}}" src="{{include.image}}" alt="{{include.alt-text}}">
         </div>
       </div>
-      <div class="unit unit-xs-1 s-1 m-1-2 l-1-2">
-        <div class="embed embed3by2">
+      <div class="unit unit-xs-1 s-1 m-1-2 l-1-2 gutter-1-4">
+        <div class="embed embed-3by2">
           <img class="embed-item" aria-details="#{{include.aria-details}}" src="{{include.image}}" alt="{{include.alt-text}}">
         </div>
       </div>
-      <div class="unit unit-xs-1 s-1 m-1 l-1">
-        <div class="embed embed3by2">
+      <div class="unit unit-xs-1 s-1 m-1 l-1 pad-t-2 gutter-1-4">
+        <div class="embed embed-3by2">
           <img class="embed-item" aria-details="#{{include.aria-details}}" src="{{include.image}}" alt="{{include.alt-text}}">
         </div>
       </div>
