Will add the css to the contact cards

--- a/_patterns/cards/contact-cards.html
+++ b/_patterns/cards/contact-cards.html
@@ -1,14 +1,15 @@
 <article class= "grid grid-middle">
-  <div class="unit unit-xs-1 s-1 m-1 l-1">
+  <div class="unit unit-xs-1 s-1 m-1-2 l-1-2">
     <div class="embed embed-1by1">
       <img class="embed-item" aria-details="#{{include.aria-details}}" src="{{include.image}}" alt="{{include.alt-text}}">
     </div>
     <div class="info-container">
-      <div class="company-name">
+      <div class="company-name island-1-2">
         <h2>{{include.name}}</h2>
         <p>{{include.company-description}}</p>
+        <button>Contact Me</button>
       </div>
-      <div class="company-info">
+      <div class="company-info island-1-2">
         <div class="grid grid-middle">
           <div class="unit unit-xs-1-2 s-1-2 m-1-2 l-1-2 gutter-1-4">
             <p>From</p>
@@ -26,7 +27,7 @@
       </div>
     </div>
   </div>
-  <div class="unit unit-xs-1 s-1 m-1 l-1 gutter">
+  <div class="unit unit-xs-1 s-1 m-1-2 l-1-2 gutter">
     <div class="grid">
       <div class="unit unit-xs-1 s-1 m-1-2 l-1-2 gutter-1-4">
         <div class="embed embed-3by2">
