--- a/_patterns/buttons/dark.html
+++ b/_patterns/buttons/dark.html
@@ -1,1 +1,1 @@
-  <a class="btn-dark" href="{{include.url}}">{{include.text}}</a>
+<a class="btn btn-dark" href="{{include.url}} tabindex="0"">{{include.text}}</a>
