--- a/sections.html
+++ b/sections.html
@@ -1,18 +1,21 @@
 <section>
-  <div class="">
-    <h3></h3>
-    <p></p>
-    <h3></h3>
-    <p></p>
-  </div>
-  <div class="">
-    <h3></h3>
-    <p></p>
-    <h3></h3>
-    <p></p>
-  </div>
-  <div class="">
-
+  <div class="grid">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      <img src="" alt="">
+      <h2>Connect. Build. Grow.</h2>
+      <p>Experience better design now</p>
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      <h2>Why People Like Us</h2>
+      <h3>Designer Focused</h3>
+      <p>No undercutting, no bidding for projects, no spec work.</p>
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      <h3>Local Designer</h3>
+      <p>Your designer is from your city, your province your country.</p>
+      <h3>Designer Friendly</h3>
+      <p>New grads, studio pros, nomadic designers, everything under the sun.</p>
+    </div>
   </div>
 </section>
 <section>
