--- a/patterns/Sections/sections.html
+++ b/patterns/Sections/sections.html
@@ -1,10 +1,14 @@
 <section>
   <div class="grid">
-    <div class="unit xs-1 s-1 m-1-2 l-1-2">
-      <img src="" alt="">
-      <h2>Connect. Build. Grow.</h2>
-      <p>Experience better design now</p>
+    <div class="banner">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+    <div class="banner-content">
+      <div class="banner-info">
+        <h2>Connect. Build. Grow.</h2>
+        <p>Experience better design now</p>
+      </div>
     </div>
+  </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2">
       <h2>Why People Like Us</h2>
       <h3>Designer Focused</h3>
