--- a/_patterns/cards/description.html
+++ b/_patterns/cards/description.html
@@ -1,5 +1,5 @@
-<div class="desicription">
-  <h2>Why People Like Us</h2>
-  <h3>Designer Focused</h3>
-  <p>No undercutting, no bidding for projects, no spec work.</p>
+<div class="description island">
+  <h2>{{include.header}}</h2>
+  <h3>{{include.subheader}}</h3>
+  <p>{{include.description}}</p>
 </div>
