fix banner issues

--- a/_patterns/banner/hero-banner.html
+++ b/_patterns/banner/hero-banner.html
@@ -2,7 +2,7 @@
 {% pattern header/header logo="/images/placeholder-1by1.svg" %}
   <div class="banner-title absolute">
     <div class="hero-title">
-      <h1 class="portfolio push-1-4">{{include.heading}}<span style="margin-right: -.25em">.</span></h1>
+      <h1 class="portfolio push-1-4">{{include.heading}}</h1>
     </div>
   </div>
 </div>
