--- a/_patterns/banner/main-banner.html
+++ b/_patterns/banner/main-banner.html
@@ -4,7 +4,7 @@
     <div class="banner-title absolute">
       <div class="main-title text-center wrapper">
         <h1 class="title push-1-2">{{include.heading}}</h1>
-        <p class="subhead">{{include.text}}<span style="margin-right: -.25em">.</span></p>
+        <p class="subhead">{{include.text}}</p>
       </div>
     </div>
   </div>
