--- a/_patterns/forms/basic-form.html
+++ b/_patterns/forms/basic-form.html
@@ -1,17 +1,21 @@
-<form class="" action="" method="post" novalidate>
-  <legend>Contact Us</legend>
-  <fieldset>
-  <div class="push-1-2">
-    <label for="name">Name</label><input type="text" name="name" id="name"><br>
-  </div>
-  <div class="push-1-2">
-    <label for="email">Email</label><input type="email" name="email" id="email" required aria-describedby="email-error">
-  </div>
-  <div class="push-1-2">
-    <textarea name="comment" rows="8" cols="80">Enter text here...</textarea>
-  </div>
-  <div class="push-1-2">
+<div class="form-container">
+  <form>
+    <div class="form-container">
+      <h1>Contact Us</h1>
+      <p>Please fill in this form to submit an inquiry.</p>
+      <hr>
 
-  </div>
-  </fieldset>
-</form>
+      <label for="name"><b>Name</b></label>
+      <input type="text" placeholder="Enter Name" name="name" required>
+
+      <label for="email"><b>Email</b></label>
+      <input type="text" placeholder="Enter Email" name="email" required>
+
+      <textarea name="message" rows="8" cols="80">Enter message here...</textarea>
+      <hr>
+
+      <p class="italic">We will get back to you as soon as possible!</p>
+      {% pattern buttons/dark text="Submit" url="/index/" %}
+    </div>
+  </form>
+</div>
