--- a/_patterns/forms/basic-form.html
+++ b/_patterns/forms/basic-form.html
@@ -1,6 +1,6 @@
 <div class="form-container">
   <form>
-    <div class="form-container">
+    <div>
       <h1>Contact Us</h1>
       <p>Please fill in this form to submit an inquiry.</p>
       <hr>
@@ -9,12 +9,12 @@
       <input type="text" placeholder="Enter Name" name="name" required>
 
       <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <input type="text" placeholder="Enter Email" name="email" required
 
+      <label for="message"><b>Message</b></label>
       <textarea name="message" rows="8" cols="80">Enter message here...</textarea>
-      <hr>
 
-      <p class="italic">We will get back to you as soon as possible!</p>
+      <p class="micro italic">We will get back to you as soon as possible!</p>
       {% pattern buttons/dark text="Submit" url="/index/" %}
     </div>
   </form>
