--- a/_patterns/forms/search-form.html
+++ b/_patterns/forms/search-form.html
@@ -1,21 +1,51 @@
 <div class="search-container">
   <form>
-    <div>
-      <h1>Find Your Designer</h1>
-      <p>Please fill form .</p>
+    <div class="grid">
+      <div class="unit xs-1 s-2 m-1 l-1 xl-1">
+        <h1>Submission Form</h1>
+      </div>
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        {% pattern buttons/ghost text="Independent" url="/index/" %}
+      </div>
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        {% pattern buttons/ghost text="Studio" url="/index/" %}
+      </div>
+
       <hr>
 
-      <label for="name"><b>Name</b></label>
-      <input type="text" placeholder="Enter Name" name="name" required>
+      <div class="unit unit xs-1 s-2 m-1 l-1 xl-1">
+        <label for="name"><b>Name</b></label>
+        <input type="text" placeholder="Enter Name" name="name" required>
 
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required
+        <label for="email"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" name="email" required
 
-      <label for="message"><b>Message</b></label>
-      <textarea name="message" rows="8" cols="80">Enter message here...</textarea>
+        <label for="city"><b>City</b></label>
+        <input type="text" placeholder="Enter City" name="city" required
+      </div>
 
-      <p class="micro italic">We will get back to you as soon as possible!</p>
-      {% pattern buttons/dark text="Submit" url="/index/" %}
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
+        <select name="design">
+          <option value="print">Print Design</option>
+          <option value="motion">Motion Design</option>
+          <option value="ui/ux">UI/Ux Design</option>
+          <option value="web">Web Design</option>
+        </select>
+      </div>
+
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        <select name="price">
+          <option value="$">$</option>
+          <option value="$$">$$</option>
+          <option value="$$$">$$$</option>
+          <option value="$$$$">$$$$</option>
+        </select>
+      </div>
+
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        {% pattern buttons/dark text="Submit" url="/index/" %}
+      </div>
+
     </div>
   </form>
 </div>
