--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,38 +1,38 @@
 
 <footer role="contentinfo" class="contentinfo island-1-2 push-0">
 <div>
-  <h2 id="contact" class="pad-t-1-2 gutter">Contact</h2>
-    <ul class="list-group-inline grid push-0 social">
+  <h2 id="contact" class="pad-t-1-2 pad-b-2 gutter">Contact</h2>
+    <ul class="list-group-inline grid push-0 social pad-t">
       <li class="unit unit-xs-1 s-1 m-1-2 l-1-4 xl-1-4 pad-b-1-2">
-        <a class="icon-link gutter-1-2 footer" href="{{include.link}}">
+        <a class="icon-link gutter-1-2 footer" href="{{include.link1}}">
           <i class="icon i-32">
-            <img src="{{include.icon}}" alt="Facebook icon">
+            <img src="{{include.icon1}}" alt="Facebook icon">
           </i>
-          <span class="gutter-1-4 icon-label micro">{{include.social}}</span>
+          <span class="social-media gutter-1-4 icon-label micro">{{include.social1}}</span>
         </a>
       </li>
       <li class="unit unit-xs-1 s-1 m-1-2 l-1-4 xl-1-4 pad-b-1-2">
-        <a class="icon-link gutter-1-2 footer" href="{{include.link}}">
+        <a class="icon-link gutter-1-2 footer" href="{{include.link2}}">
           <i class="icon i-32">
-            <img src="{{include.icon}}" alt="Twitter icon">
+            <img src="{{include.icon2}}" alt="Twitter icon">
           </i>
-          <span class="gutter-1-4 icon-label micro">{{include.social}}</span>
+          <span class="social-media gutter-1-4 icon-label micro">{{include.social2}}</span>
         </a>
       </li>
       <li class="unit unit-xs-1 s-1 m-1-2 l-1-4 xl-1-4 pad-b-1-2">
-        <a class="icon-link gutter-1-2 footer" href="{{include.link}}">
+        <a class="icon-link gutter-1-2 footer" href="{{include.link3}}">
           <i class="icon i-32">
-            <img src="{{include.icon}}" alt="Pintrest icon">
+            <img src="{{include.icon3}}" alt="Pinterest icon">
           </i>
-          <span class="gutter-1-4 icon-label micro">{{include.social}}</span>
+          <span class="social-media gutter-1-4 icon-label micro">{{include.social3}}</span>
         </a>
       </li>
       <li class="unit unit-xs-1 s-1 m-1-2 l-1-4 xl-1-4 pad-b-1-2">
-        <a class="icon-link gutter-1-2 footer" href="{{include.link}}">
+        <a class="icon-link gutter-1-2 footer" href="{{include.link4}}">
           <i class="icon i-32">
-            <img src="{{include.icon}}" alt="instagram icon">
+            <img src="{{include.icon4}}" alt="instagram icon">
           </i>
-          <span class="gutter-1-4 icon-label micro">{{include.social}}</span>
+          <span class="social-media gutter-1-4 icon-label micro">{{include.social4}}</span>
         </a>
       </li>
     </ul>
