--- a/_patterns/cards/results-card.html
+++ b/_patterns/cards/results-card.html
@@ -1,17 +1,17 @@
-<article class= "grid grid-middle">
+<article class= "grid grid-middle" style="background-color: beige;">
   <div class="unit unit-xs-1 s-1 m-1-3 l-1-3">
     <div class="embed embed-3by2">
       <img class="embed-item" aria-details="#{{include.aria-details}}" src="{{include.image}}" alt="{{include.alt-text}}">
     </div>
   </div>
-  <div class="unit unit-xs-1 s-1 m-2-3 l-2-3">
+  <div class="unit unit-xs-1 s-1 m-1-2 l-1-2 text-center">
       <div class="island">
           <div class="">
             <h3 class="push-0 yotta"><strong>{{include.name}}</strong></h3>
             <p class="kilo">{{include.type}}</p>
           </div>
         </div>
-        <div class="unit unit-xs-1 s-1 m-1 l-1 text-left gutter">
+        <div class=" gutter">
           {% pattern buttons/dark text="About Us" url="/index/" %}
         </div>
       </div>
