Add all pages to the website and all its content
This is a mega update adding everything we need except images.

--- a/_patterns/cards/description.html
+++ b/_patterns/cards/description.html
@@ -1,5 +1,5 @@
 <div class="description island">
   <h2>{{include.header}}</h2>
-  <h3>{{include.subheader}}</h3>
-  <p>{{include.description}}</p>
+  <h3 class="push-0">{{include.subheader}}</h3>
+  <p class="milli">{{include.description}}</p>
 </div>
