--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -14,7 +14,7 @@
       </div>
       <ul class="menu list-group-inline push-0 text-right gutter-1-2 pad-b-1-4 unit unit-xs-1 s-1 m-2-3 l-1-2 xl-1-2">
         <li class="bold milli text-center{% if page.highlight_nav == 'work' %}current{% endif %}"><a class="link-box island-1-4 nav gutter-1-2" href="/index">Home</a></li>
-        <li class="bold milli text-center{% if page.highlight_nav == 'work' %}current{% endif %}"><a class="link-box island-1-4 nav gutter-1-2" href="/#designers/">Designers</a></li>
+        <li class="bold milli text-center{% if page.highlight_nav == 'work' %}current{% endif %}"><a class="link-box island-1-4 nav gutter-1-2" href="/designers/">Designers</a></li>
         <li class=" bold milli text-center{% if page.highlight_nav == 'contact' %}current{% endif %}"><a class="link-box island-1-4 nav gutter-1-2" href="/#about">About</a></li>
     </ul>
     </div>
