--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
 ---
 layout: default
 ---
+{% pattern banner/main-banner heading="Connect. Build. Grow." text="Experience Better Design Now" banner_img="/images/placeholder-16by9.svg" %}
+<div class="wrapper">
+
+<div class="grid pad-t">
+  <div class="unit unit-xs-1 s-1 m-1-2 l-1-2 island-1-2">
+    <h1 class="yotta">Why People Like Us</h1>
+  </div>
+  <div class="unit unit-xs-1 s-1 m-1-2 l-1-2 island-1-2">
+    {% pattern cards/description subheader="Designer Focused" description="No undercutting, no bidding for projects, no spec work." %}
+  </div>
+  <div class="unit unit-xs-1 s-1 m-1-2 l-1-2 island-1-2">
+    {% pattern cards/description subheader="Local Designer" description="Your designer is from your city, your province your country." %}
+  </div>
+  <div class="unit unit-xs-1 s-1 m-1-2 l-1-2 island-1-2">
+    {% pattern cards/description subheader="Designer Friendly" description="New grads, studio pros, nomadic designers, everything under the sun." %}
+  </div>
+</div>
+<div class="unit unit-xs-1 s-1 m-1-2 l-1-2 island-1-2 push">
+  {% pattern buttons/primary-btn text="Find your Designer" url="/designers/" %}
+</div>
+
+<div class="island-1-2">
+  <h2>Who We Are</h2>
+</div>
+<div class="island-1-2">
+  {% pattern forms/basic-form %}
+</div>
+</div>
