Fix links used in buttons

--- a/designers.html
+++ b/designers.html
@@ -51,6 +51,6 @@ layout: default
     {% pattern forms/list lists="Price Range" option1="$" option2="$$" option3="$$$" option4="$$$$" option5="$$$$$"%}
   </div>
   <div class="island-1-4 unit unit-s-1">
-    {% pattern buttons/dark text="See Results" url="designer-result" %}
+    {% pattern buttons/dark text="See Results" url="/agency-results/" %}
   </div>
 </div>
