--- a/_patterns/buttons/ghost.html
+++ b/_patterns/buttons/ghost.html
@@ -1,1 +1,1 @@
-<a class="btn btn-ghost" href="{{include.url}} tabindex="0"">{{include.text}}</a>
+<a class="btn btn-ghost" href="{{include.url}}" tabindex="0"">{{include.text}}</a>
