--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{% pattern banner/main-banner heading="Connect. Build. Grow." text="Experience Better Design Now" banner_img="/images/placeholder-16by9.svg" %}
+{% pattern banner/main-banner heading="Connect. Build. Grow." text="Experience Better Design Now" banner_img="/images/banner-main.jpg" %}
 <div class="wrapper">
 
 <div class="grid pad-t">
@@ -24,6 +24,7 @@ layout: default
 
 <div class="island-1-2">
   <h2>Who We Are</h2>
+  <p>We are a small group of guys, who decided to set up a brand that connects local designers to local small and medium size businesses. We want people to rely on the the local scene to help build and grow the budding creative community in their city.</p>
 </div>
 <div class="island-1-2">
   {% pattern forms/basic-form %}
