Create designers result page

--- a/designers.html
+++ b/designers.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{% pattern banner/hero-banner heading="Find Your Designer Today!" text="Experience Better Design Now" banner_img="/images/placeholder-16by9.svg" %}
+{% pattern banner/hero-banner heading="Find Your Designer Today!" text="Experience Better Design Now" banner_img="/images/banner-search.jpg" %}
 
 <!-- <div class="grid grid-middle">
   <div class="unit-content-center unit unit xs-1 s-1-2 m-1-2 l-1-2 text-center">
