--- a/_patterns/cards/contact-cards.html
+++ b/_patterns/cards/contact-cards.html
@@ -9,7 +9,7 @@
           <h2>{{include.name}}</h2>
           <p>{{include.company-description}}</p>
           <div class="pad-t">
-            <button>Contact Me</button>
+            <button>Website</button>
           </div>
         </div>
         <div class="company-info gutter-1-2">
@@ -49,8 +49,5 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="gutter">
-    <button type="button" name="button">Back to search</button>
   </div>
 </article>
