--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -3,7 +3,7 @@
 <div>
   <h2 id="contact" class="pad-t-1-2 pad-b-2 gutter">Contact</h2>
     <ul class="list-group-inline grid push-0 social pad-t">
-      <li class="unit unit-xs-1 s-1 m-1-2 l-1-4 xl-1-4 pad-b-1-2">
+      <li class="unit unit-xs-1-2 s-1-4 m-1-4 l-1-4 xl-1-4 pad-b-1-2">
         <a class="icon-link gutter-1-2 footer" href="{{include.link1}}">
           <i class="icon i-32">
             <img src="{{include.icon1}}" alt="Facebook icon">
@@ -11,7 +11,7 @@
           <span class="social-media gutter-1-4 icon-label micro">{{include.social1}}</span>
         </a>
       </li>
-      <li class="unit unit-xs-1 s-1 m-1-2 l-1-4 xl-1-4 pad-b-1-2">
+      <li class="unit unit-xs-1-2 s-1-4 m-1-4 l-1-4 xl-1-4 pad-b-1-2">
         <a class="icon-link gutter-1-2 footer" href="{{include.link2}}">
           <i class="icon i-32">
             <img src="{{include.icon2}}" alt="Twitter icon">
@@ -19,7 +19,7 @@
           <span class="social-media gutter-1-4 icon-label micro">{{include.social2}}</span>
         </a>
       </li>
-      <li class="unit unit-xs-1 s-1 m-1-2 l-1-4 xl-1-4 pad-b-1-2">
+      <li class="unit unit-xs-1-2 s-1-4 m-1-4 l-1-4 xl-1-4 pad-b-1-2">
         <a class="icon-link gutter-1-2 footer" href="{{include.link3}}">
           <i class="icon i-32">
             <img src="{{include.icon3}}" alt="Pinterest icon">
@@ -27,7 +27,7 @@
           <span class="social-media gutter-1-4 icon-label micro">{{include.social3}}</span>
         </a>
       </li>
-      <li class="unit unit-xs-1 s-1 m-1-2 l-1-4 xl-1-4 pad-b-1-2">
+      <li class="unit unit-xs-1-2 s-1-4 m-1-4 l-1-4 xl-1-4 pad-b-1-2">
         <a class="icon-link gutter-1-2 footer" href="{{include.link4}}">
           <i class="icon i-32">
             <img src="{{include.icon4}}" alt="instagram icon">
