--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
   {% pattern buttons/primary-btn text="Find your Designer" url="/designers/" %}
 </div>
 
-<div class="island-1-2">
+<div class="island-1-2" id="about">
   <h2>Who We Are</h2>
   <p>We are a small group of guys, who decided to set up a brand that connects local designers to local small and medium size businesses. We want people to rely on the the local scene to help build and grow the budding creative community in their city.</p>
 </div>
