--- a/_patterns/banner/hero-banner.html
+++ b/_patterns/banner/hero-banner.html
@@ -1,7 +1,7 @@
 <div class="relative hero-banner" style="background-image: url('{{include.banner_img}}')">
   <div class="banner-title absolute">
     <div class="hero-title">
-      <h1 class="portfolio push-1-4">{{include.heading}}</h1>
+      <h1 class="portfolio tena push-1-4">{{include.heading}}</h1>
     </div>
   </div>
 </div>
