--- a/_patterns/banner/main-banner.html
+++ b/_patterns/banner/main-banner.html
@@ -2,7 +2,7 @@
   <div class="relative main-banner" style="background-image: url('{{include.banner_img}}')">
     <div class="banner-title absolute">
       <div class="main-title text-center wrapper">
-        <h1 class="title push-1-2">{{include.heading}}</h1>
+        <h1 class="title tena push-1-2">{{include.heading}}</h1>
         <p class="subhead">{{include.text}}</p>
       </div>
     </div>
