--- a/agency-results.html
+++ b/agency-results.html
@@ -5,17 +5,30 @@ layout: default
 
 <div class="wrapper pad-t-2">
   <div class="">
-    <div class="embed embed-3by1">
+    <a href="https://www.google.com/maps/@45.4295552,-75.6786253,14z">
+    <div class="embed embed-3by1 push">
       <img class="embed-item" aria-details="#{{include.aria-details}}" src="/images/map-in.jpg" alt="{{include.alt-text}}">
     </div>
+    </a>
   </div>
-  <div class="pad-t-2 pad-b">
-    {% pattern cards/results-card name="Qoncept Studio" type="Print Designer - Web Designer" image="/images/agency-1.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
-  </div>
-  <div class="pad-t-2 pad-b">
-    {% pattern cards/results-card name="GRAPIQE" type="Print Designer - Motion Designer" image="/images/agency-2.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
-  </div>
-  <div class="pad-t-2 pad-b-2">
-    {% pattern cards/results-card name="SCRBBLER" type="Print Designer - Web Designer" image="/images/agency-3.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+  <div class="grid grid-stretch">
+    <div class="unit unit-xs-1 s-1 m-3-4 l-3-4 gutter push" style="background-color: beige;">
+      {% pattern cards/results-card name="Qoncept Studio" type="Print Designer - Web Designer" image="/images/agency-1.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+    </div>
+    <div class="unit unit-xs-1 s-1 m-1-4 l-1-4 gutter push center-content-vertical text-center" style="background-color: beige;">
+      {% pattern buttons/dark text="About Us" url="/qoncept/" %}
+    </div>
+    <div class=" unit unit-xs-1 s-1 m-3-4 l-3-4 gutter push" style="background-color: beige;">
+      {% pattern cards/results-card name="GRAPIQE" type="Print Designer - Motion Designer" image="/images/agency-2.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+    </div>
+    <div class="unit unit-xs-1 s-1 m-1-4 l-1-4 gutter push center-content-vertical text-center" style="background-color: beige;">
+      {% pattern buttons/dark text="About Us" url="/qoncept/" %}
+    </div>
+    <div class="unit unit-xs-1 s-1 m-3-4 l-3-4 gutter push" style="background-color: beige;">
+      {% pattern cards/results-card name="SCRBBLER" type="Print Designer - Web Designer" image="/images/agency-3.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+    </div>
+    <div class="unit unit-xs-1 s-1 m-1-4 l-1-4 gutter push center-content-vertical text-center" style="background-color: beige;">
+      {% pattern buttons/dark text="About Us" url="/qoncept/" %}
+    </div>
   </div>
 </div>
