--- a/designer-results.html
+++ b/designer-results.html
@@ -10,12 +10,12 @@ layout: default
     </div>
   </div>
   <div class="pad-t-2 pad-b">
-    {% pattern cards/results-card name="James Brighton" type="Web Designer - UX Designer" image="/images/agency-1.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+    {% pattern cards/results-card name="James Brighton" type="Web Designer - UX Designer" image="/images/designer-m-1.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
   </div>
   <div class="pad-t-2 pad-b">
-    {% pattern cards/results-card name="Sarah Jones" type="Web Designer - UI Designer" image="/images/agency-2.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+    {% pattern cards/results-card name="Sarah Jones" type="Web Designer - UI Designer" image="/images/designer-f-1.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
   </div>
   <div class="pad-t-2 pad-b-2">
-    {% pattern cards/results-card name="Kayla Fisher" type="Web Designer - Print Designer" image="/images/agency-3.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+    {% pattern cards/results-card name="Kayla Fisher" type="Web Designer - Print Designer" image="/images/designer-f-2.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
   </div>
 </div>
