--- a/agency-results-out.html
+++ b/agency-results-out.html
@@ -10,12 +10,21 @@ layout: default
     </div>
   </div>
   <div class="pad-t-2 pad-b">
-    {% pattern cards/results-card name="Qoncept Studio" type="Print Designer - Web Designer" image="/images/agency-1.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+    {% pattern cards/results-card name="Qoncept Studio" type="Print Designer - UI Designer" image="/images/agency-1.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
   </div>
   <div class="pad-t-2 pad-b">
     {% pattern cards/results-card name="GRAPIQE" type="Print Designer - Motion Designer" image="/images/agency-2.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
   </div>
   <div class="pad-t-2 pad-b-2">
     {% pattern cards/results-card name="SCRBBLER" type="Print Designer - Web Designer" image="/images/agency-3.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+  </div>
+  <div class="pad-t-2 pad-b">
+    {% pattern cards/results-card name="Indenico" type="Print Designer - UI Designer" image="/images/agency-4.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+  </div>
+  <div class="pad-t-2 pad-b">
+    {% pattern cards/results-card name="Artecus" type="Print Designer - Motion Designer" image="/images/agency-5.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+  </div>
+  <div class="pad-t-2 pad-b-2">
+    {% pattern cards/results-card name="Logqo" type="Print Designer - Web Designer" image="/images/agency-6.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
   </div>
 </div>
