--- a/mona-mitri.html
+++ b/mona-mitri.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-{% pattern banner/hero-banner heading="Results" text="Experience Better Design Now" banner_img="/images/banner-designer-result.jpg" %}
+{% pattern banner/hero-banner heading="Your Personal Designer" text="Experience Better Design Now" banner_img="/images/banner-designer-result.jpg" %}
 
-{% pattern cards/contact-cards name="James Brighton" company-description="Web Designer - UX Designer" from="Ottawa, Ontario" since="September 2019" response="4 hours" recent="Web - 4 days ago" image="/images/designer-m-1.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
+{% pattern cards/contact-cards name="Mona Mitri" company-description="Web Designer - Print Designer" from="Ottawa, Ontario" since="July 2019" response="2 hours" recent="Print - 4 days ago" image="/images/mona-mitri.jpg" aria-details="Assign non-visible text to enhance the description of an element" aria-label="Assign the description of an element to other elements on the page" alt-text="Assign the description to an image if necessary" %}
 
 <div class="gutter pad-t-2 push-2">
-{% pattern buttons/dark text="Back to Results" url="/agency-results/" %}
+{% pattern buttons/dark text="Back to Results" url="/designer-results-out/" %}
 </div>
